# EarningsQ-A

./: .env.example  .gitignore  DESIGN.md  IMPLEMENTATION.md  README.md  TESTING.md  WALKTHROUGH.md  check_imports.py  main.py  pyproject.toml  requirements.txt  setup.py  test_regex.py
config/: transcripts_manifest.json
data/transcripts/: AAPL_Q1_2024.txt
earnings_qa/: __init__.py  config.py
earnings_qa/cli/: __init__.py  interface.py
earnings_qa/config/: company_catalog.json
earnings_qa/core/: __init__.py  cache.py  chat_service.py  observability.py
earnings_qa/guardrails/: __init__.py  validator.py
earnings_qa/llm/: __init__.py  backend.py  client.py  prompts.py
earnings_qa/rag/: __init__.py  backend.py  embeddings.py  ingestion.py  retriever.py
src/: __init__.py  config.py
src/cli/: __init__.py  interface.py
src/core/: __init__.py  chat_service.py
src/guardrails/: __init__.py  validator.py
src/llm/: __init__.py  backend.py  client.py  prompts.py
src/rag/: __init__.py  backend.py  embeddings.py  ingestion.py  retriever.py
tests/: conftest.py  test_async.py  test_extraction.py  test_guardrails.py  test_income_fix.py  test_indexing.py  test_multi_quarter.py  test_observability_versioning_cache.py
